fix nav z-index

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@ nav {
   top: 0;
   left: 0;
   right: 0;
+}
+
+nav.front {
   z-index: 5;
 }
 
